--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,8 +16,9 @@ html {
 }
 
 .container {
-    padding-top: 30px;
-    width: 1500px;
+    padding-top: 50px;
+    max-width: 1500px;
+    width: 78%;
     margin: 0 auto;
 }
 
@@ -30,12 +31,13 @@ html {
     background-color: aquamarine;
     display: flex;
     flex-direction: column;
-    width: 250px;
+    width: 300px;
     border-radius: 30px;
     padding: 10px 20px 20px 20px;
 }
 
 .card:not(:last-child) {
+    height: max-content;
     margin-right: 20px;
 }
 
@@ -43,6 +45,7 @@ html {
     text-align: center;
     font-size: 20px;
     margin-bottom: 10px;
+    color: black;
 }
 
 .buttons {
@@ -66,7 +69,9 @@ html {
 .buttons__item,
 .card__add,
 .btns-changes__item,
-.users__item {
+.users__item,
+.main-buttons__item,
+.settings__button {
     transition: transform 0.1s ease-in-out;
 }
 
@@ -96,14 +101,18 @@ html {
 .buttons__item:hover,
 .card__add:hover,
 .btns-changes__item:hover,
-.users__item:hover {
+.users__item:hover,
+.main-buttons__item:hover,
+.settings__button:hover {
     transform: scale(0.96);
 }
 
 .buttons__item:active,
 .card__add:active,
 .btns-changes__item:active,
-.users__item:active {
+.users__item:active,
+.main-buttons__item:active,
+.settings__button:active {
     transform: scale(1.04);
 }
 
@@ -133,12 +142,20 @@ html {
     font-weight: 900;
 }
 
+.main-buttons__item {
+    background-color: #20bf55;
+    background-image: linear-gradient(315deg, #20bf55 0%, #01baef 74%);
+    color: white;
+    cursor: pointer;
+}
+
 .btns-changes__item:first-child {
     margin-right: 20px;
 }
 
 .add {
-    background-color: green;
+    background-color: #3bb78f;
+    background-image: linear-gradient(315deg, #3bb78f 0%, #0bab64 74%);
 }
 
 .add-active {
@@ -146,7 +163,8 @@ html {
 }
 
 .delete {
-    background-color: red;
+    background-color: #f5f5f1;
+    background-image: linear-gradient(315deg, #f5f5f1 0%, #e50914 74%);
 }
 
 .card__add-active {
@@ -157,7 +175,8 @@ html {
     z-index: 100;
     background-color: rgba(0, 0, 0, 0.5);
     position: absolute;
-    height: 100%;
+    min-height: 100%;
+    height: initial;
     width: 100%;
     display: none;
 }
@@ -167,12 +186,13 @@ html {
 }
 
 .block {
-    position: absolute;
+    position: relative;
     display: inline-block;
     padding: 20px;
-    width: 500px;
-    transform: translate(-50%, 50%);
+    margin: 80px 0 30px 0;
+    width: 700px;
     left: 50%;
+    transform: translateX(-50%);
     border-radius: 10px;
     background-color: inherit;
 }
@@ -206,7 +226,7 @@ html {
     font-size: 30px;
     font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
     font-weight: 900;
-    color: goldenrod;
+    color: #f6d327;
     display: flex;
     flex-direction: row;
 }
@@ -289,4 +309,116 @@ html {
     87.5% {
         box-shadow: 0em -3em 0 0, 2em -2em 0 -1em, 3em 0 0 -1em, 2em 2em 0 -1em, 0 3em 0 -1em, -2em 2em 0 0, -3em 0em 0 0, -2em -2em 0 0.2em;
     }
+}
+
+.happyOne {
+    color: white;
+    background-color: #663dff;
+    background-image: linear-gradient( 319deg, #663dff 0%, #aa00ff 37%, #cc4499 100%);
+}
+
+.colors {
+    color: white;
+    background: linear-gradient( 90deg, rgba(255, 0, 0, 1) 0%, rgba(255, 154, 0, 1) 10%, rgba(208, 222, 33, 1) 20%, rgba(79, 220, 74, 1) 30%, rgba(63, 218, 216, 1) 40%, rgba(47, 201, 226, 1) 50%, rgba(28, 127, 238, 1) 60%, rgba(95, 21, 242, 1) 70%, rgba(186, 12, 248, 1) 80%, rgba(251, 7, 217, 1) 90%, rgba(255, 0, 0, 1) 100%);
+}
+
+.magicLeafs {
+    color: black;
+    background: linear-gradient( 90deg, rgba(249, 246, 145, 1) 0%, rgba(255, 255, 255, 1) 52%, rgba(163, 235, 228, 1) 100%);
+}
+
+.macCards {
+    box-sizing: border-box;
+    border: 4px solid black;
+    color: white;
+    background-color: #ff7d59;
+    background-image: linear-gradient( 319deg, #ff7d59 0%, #ff583a 37%, #f4a698 100%);
+}
+
+.emotions {
+    background-color: #fce055;
+    background-image: linear-gradient( 319deg, #fce055 0%, #256eff 37%, #46237a 100%);
+    color: white;
+}
+
+.cross {
+    color: white;
+    font-size: 60px;
+    position: absolute;
+    top: 10px;
+    right: 30px;
+    cursor: pointer;
+}
+
+.main-buttons {
+    display: flex;
+    flex-direction: column;
+    width: max-content;
+    margin: 0 auto;
+}
+
+.main-buttons__item {
+    font-size: 35px;
+    padding: 10px 100px;
+    border-radius: 20px;
+    border: none;
+}
+
+.main-buttons__item:not(:last-child) {
+    margin-bottom: 20px;
+}
+
+.continue-button-disable {
+    pointer-events: none;
+    opacity: 0.5;
+}
+
+.block-settings {}
+
+.settings__label {
+    color: white;
+    font-size: 32px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.settings__input {
+    width: 85%;
+}
+
+.settings {
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    margin: 0 auto;
+}
+
+.settings__button {
+    font-size: 32px;
+    background-color: #7ee8fa;
+    background-image: linear-gradient(315deg, #7ee8fa 0%, #80ff72 74%);
+    border-radius: 10px;
+    padding: 5px 0;
+    color: white;
+    border: none;
+}
+
+.settings__input-danger {
+    border: 2px solid red;
+}
+
+.black-back-active .danger-modal {
+    display: inline-block;
+    position: absolute;
+    z-index: 100;
+    background-color: red;
+    color: white;
+    left: 50%;
+    transform: translateX(-50%);
+    border-radius: 20px;
+    font-size: 40px;
+    top: 40px;
+    padding: 10px;
 }
